--- a/pre_class_1_exercises.Rmd
+++ b/pre_class_1_exercises.Rmd
@@ -58,9 +58,8 @@ mtcars %>%
 #create some sort of plot plotting the data
 
 ggplot(cars, aes(gear)) + geom_histogram(bins=10) + scale_x_continuous(breaks=c(3,4,5)) + xlab("number of gears") + ylab("amount of cars")
-                 
-
-
+      
+#does my pushing works??
 ```
 
 
