final commit of portfolio 2

--- a/Assignments/2/A2_P123_LanguageASD_ALL.tex
+++ b/Assignments/2/A2_P123_LanguageASD_ALL.tex
@@ -25,7 +25,7 @@
 \usepackage{hyperref}
 \hypersetup{unicode=true,
             pdftitle={Assignment 2 - Language Development in ASD - Part 1 - Explaining development},
-            pdfauthor={Alexander Jakub},
+            pdfauthor={Alexander Mirz \& Jakub Raszka},
             pdfborder={0 0 0},
             breaklinks=true}
 \urlstyle{same}  % don't use monospace font for urls
@@ -78,7 +78,7 @@
 development}
     \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
-    \author{Alexander Jakub}
+    \author{Alexander Mirz \& Jakub Raszka}
     \preauthor{\centering\large\emph}
   \postauthor{\par}
       \predate{\centering\large\emph}
