--- a/Assignments/2/A2_P123_LanguageASD_ALL.Rmd
+++ b/Assignments/2/A2_P123_LanguageASD_ALL.Rmd
@@ -683,7 +683,7 @@ complexS1=powerSim(complexMUSV, test = fixed("Visit:Diagnosis"), nsim = 1000, se
 complexS1
 
 #power of visit:verbalIQ1
-complexS2=powerSim(complexMUSV, test = fixed("Visit:scaled_verbalIQ"), nsim = 10, seed = 1, progress = T) # 46.80% (43.67, 49.95)
+complexS2=powerSim(complexMUSV, test = fixed("Visit:scaled_verbalIQ"), nsim = 1000, seed = 1, progress = T) # 46.80% (43.67, 49.95)
 complexS2
 
 #power of diagnosis and verbalIQ1
@@ -737,9 +737,10 @@ plot(PCF1)
 
 ##power of visit:verbalIQ1
 fixef(complexMUSV_e)["Visit:scaled_verbalIQ"] <- 0.005
-powerSim(complexMUSV_e, test = fixed("Visit:scaled_verbalIQ"), nsim = 10, progress = T) #  100.0% (99.63, 100.0) #48% (37.9, 58.22)
-PCF2 = powerCurve(complexMUSV_e, test = fixed("Visit:scaled_verbalIQ"), along = "Child.ID", nsim = 10, breaks = seq(from = 100, to = 1000, by = 100), seed = 1, progress = T)
+powerSim(complexMUSV_e, test = fixed("Visit:scaled_verbalIQ"), nsim = 1000, progress = T) #  14.10% (12.00, 16.41)
+PCF2 = powerCurve(complexMUSV_e, test = fixed("Visit:scaled_verbalIQ"), along = "Child.ID", nsim = 1000, breaks = seq(from = 50, to = 300, by = 50), seed = 1, progress = T)
 plot(PCF2)
+
 
 ##power of Diagnosis:verbalIQ1
 fixef(complexMUSV_e)["DiagnosisTD:scaled_verbalIQ"] <- 0.1
